Optimized People UI and Adjustment of global.css - Added sticky header for fellowship groups on people.html - Added expandable/collapsible toggle for fellowship groups on people.html - Moved editing of people data to a modal/popup - Adjusted global.css to remove button hover effect on mobile   - This prevented fake "checked" behavior of a unchecked button on mobile   - i.e. You uncheck a group but it's still highlighted because of hover - Adjusted global.css for buttons to directly use colors instead of variables.   - This prevented issues of modifying the primary-color (i.e. headers) affecting the button highlighted color

--- a/web/static/css/global.css
+++ b/web/static/css/global.css
@@ -110,14 +110,17 @@ button {
     padding: var(--spacing-sm) var(--spacing-md);
     border: none;
     border-radius: var(--border-radius);
-    background-color: var(--primary-color);
+    background-color: #1abc9c;
     color: var(--text-light);
     transition: background-color var(--transition-default), transform var(--transition-default);
 }
 
-button:hover {
-    background-color: var(--primary-color-dark);
-    transform: translateY(-2px);
+@media(hover: hover) and (pointer: fine) {
+    button:hover {
+        background-color: #3e8e41;
+        color: #fff;
+        transform: translateY(-2px);
+    }
 }
 
 button:active {
